2008-06-23  Jared Moore  <jaredm@svn.gnome.org>

	* vala/valasemanticanalyzer.vala:

	Report error when trying to access 'class' member statically rather
	than through an instance, fixes bug 539594.

2008-06-23  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodeobjecttypesymbolbinding.vala:

	Fix support for out string array parameters of methods exported
	via D-Bus

2008-06-23  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodeclassbinding.vala:
	* gobject/valaccodegenerator.vala:

	Fix exception handling in destructors, fixes bug 538216

2008-06-23  Jürg Billeter  <j@bitron.ch>

	* vapi/Makefile.am:
	* vapi/libgsf-1.deps:
	* vapi/libgsf-1.vapi:
	* vapi/packages/libgsf-1/:

	Add libgsf-1 bindings, patch by Michael Lawrence, fixes bug 455141

2008-06-23  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodeassignmentbinding.vala:

	Support disconnecting from detailed signals

2008-06-23  Jürg Billeter  <j@bitron.ch>

	* vala/valacfgbuilder.vala:
	* vala/valaelementaccess.vala:
	* vala/valanullchecker.vala:
	* vala/valasemanticanalyzer.vala:
	* vala/valasignal.vala:
	* vala/valasymbolresolver.vala:
	* gobject/valaccodeassignmentbinding.vala:
	* gobject/valaccodeelementaccessbinding.vala:
	* gobject/valaccodegenerator.vala:
	* gobject/valaccodeinvocationexpressionbinding.vala:

	Support connecting to and emitting detailed signals,
	fixes bug 536794

2008-06-23  Jürg Billeter  <j@bitron.ch>

	* vala/valaattribute.vala:
	* vala/valafield.vala:
	* vala/valainterfacewriter.vala:
	* vala/valanamedargument.vala:
	* vala/valastringliteral.vala:
	* gobject/valaccodegenerator.vala:
	* vapigen/valagidlparser.vala:

	Support [CCode (type = "Foo")] to insert appropriate casts in
	generated C Code

	* vapi/packages/gtk+-2.0/:

	Fix GtkActionEntry binding, fixes bug 526874

	* vapi/gtk+-2.0.vapi: regenerated

2008-06-23  Jürg Billeter  <j@bitron.ch>

	* vala/valagenieparser.vala:
	* vala/valanamespacereference.vala:
	* vala/valasourcefile.vala:
	* compiler/valacompiler.vala:
